--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "realtime-chat-app",
   "version": "1.0.0",
   "description": "",
+  "homepage": "http://akpughe.github.io/realtime-chat-app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gh-pages": "^2.2.0",
     "next": "^9.2.2",
     "pusher": "^3.0.0",
     "pusher-js": "^5.1.1",
